attempting to fix horizontal overflow issue on mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
   padding: 0;
   margin: 0;
   font-weight: normal;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 html {
   font-family: Arial, Helvetica, sans-serif;
